// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array matches snapshot 1`] = `
Array [
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg3 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg3 no1",
    },
  ],
]
`;

exports[`async iterator matches snapshot 1`] = `
Array [
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg0 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg1 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no1",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no2",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg2 no3",
    },
  ],
  Array [
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg3 no0",
    },
    Result {
      "signal": null,
      "status": 0,
      "stderr": "",
      "stdout": "seg3 no1",
    },
  ],
]
`;

exports[`calls oncreate 1`] = `
Array [
  Object {
    "command": "echo seg0 no0",
    "signal": null,
    "status": 0,
    "stdout": "seg0 no0",
  },
  Object {
    "command": "echo seg0 no1",
    "signal": null,
    "status": 0,
    "stdout": "seg0 no1",
  },
  Object {
    "command": "echo seg0 no2",
    "signal": null,
    "status": 0,
    "stdout": "seg0 no2",
  },
  Object {
    "command": "echo seg0 no3",
    "signal": null,
    "status": 0,
    "stdout": "seg0 no3",
  },
  Object {
    "command": "echo seg1 no0",
    "signal": null,
    "status": 0,
    "stdout": "seg1 no0",
  },
  Object {
    "command": "echo seg1 no1",
    "signal": null,
    "status": 0,
    "stdout": "seg1 no1",
  },
  Object {
    "command": "echo seg1 no2",
    "signal": null,
    "status": 0,
    "stdout": "seg1 no2",
  },
  Object {
    "command": "echo seg1 no3",
    "signal": null,
    "status": 0,
    "stdout": "seg1 no3",
  },
  Object {
    "command": "echo seg2 no0",
    "signal": null,
    "status": 0,
    "stdout": "seg2 no0",
  },
  Object {
    "command": "echo seg2 no1",
    "signal": null,
    "status": 0,
    "stdout": "seg2 no1",
  },
  Object {
    "command": "echo seg2 no2",
    "signal": null,
    "status": 0,
    "stdout": "seg2 no2",
  },
  Object {
    "command": "echo seg2 no3",
    "signal": null,
    "status": 0,
    "stdout": "seg2 no3",
  },
  Object {
    "command": "echo seg3 no0",
    "signal": null,
    "status": 0,
    "stdout": "seg3 no0",
  },
  Object {
    "command": "echo seg3 no1",
    "signal": null,
    "status": 0,
    "stdout": "seg3 no1",
  },
]
`;
